<resources>
    <string name="app_name">Cartrack Test</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="register">"Register Successfully"</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username must be >5 characters</string>
    <string name="choose_country">Please Choose Country</string>
    <string name="invalid_password">Password must has a capital letter, a small letter, a number, a special character and more than 8 letter</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="country">
        <item name="choose">Choose Country</item>
        <item name="singapore">Singapore</item>
        <item name="malaysia">Malaysia</item>
        <item name="thailand">Thailand</item>
    </string-array>
    <string name="title_item_list">User List</string>
    <string name="title_item_detail">User Detail</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="geo">Geo</string>
    <string name="lng">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="catchPhase">CatchPhase</string>
    <string name="bs">Bs</string>

    <string name="list">%1$s , %2$s</string>
    <string name="title_activity_maps">Map</string>

</resources>